# Proiect_POO_BD_Scoala

./: CMakeLists.txt  elev.cpp  elev.h  elev_erasmus.cpp  elev_erasmus.h  elev_olimpic.cpp  elev_olimpic.h  elev_pregatire.cpp  elev_pregatire.h  elev_pregatiri.cpp  elev_pregatiri.h  examen.cpp  examen.h  examene.cpp  examene.h  examene_impl.cpp  exceptie.cpp  exceptie.h  exceptii.cpp  exceptii.h  laboratoare_info.cpp  laboratoare_info.h  laborator_info.cpp  laborator_info.h  main.cpp  scoala.cpp  scoala.h  table.cpp  table.h
