cmake_minimum_required(VERSION 3.20)
project(Proiect_POO)

set(CMAKE_CXX_STANDARD 17)

add_executable(Proiect_POO main.cpp elev.cpp elev.h scoala.cpp scoala.h examene.cpp examene.h elev_erasmus.cpp elev_erasmus.h elev_olimpic.cpp elev_olimpic.h elev_pregatiri.cpp elev_pregatiri.h exceptii.cpp laboratoare_info.cpp laboratoare_info.h table.cpp table.h examene_impl.cpp)
